# iservmail

./: .gitignore  README.md  create_service.txt  pyproject.toml
iservmail/: iserv_smtpserver.py  iservconnection.py
tests/: test_iservconnection.py
