[tool.poetry]
name = "iservmail"
version = "0.1.0"
description = ""
authors = ["Fabian Bühler <buehler.fabian@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.15.2"
email-validator = "^2.1.0.post1"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
