[project]
name = "iservmail"
version = "0.6.0"
description = ""
authors = [{ name = "Fabian Bühler", email = "fabian.buehler@fdtk.de" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "selenium>=4.15.2,<5",
    "email-validator>=2.1.0.post1,<3",
    "pytest>=7.4.4,<8",
    "aiosmtpd>=1.4.6,<2",
    "asyncio>=3.4.3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
